--- a/AngularSignalR/AngularSignalR/Web/partials/product-list.html
+++ b/AngularSignalR/AngularSignalR/Web/partials/product-list.html
@@ -29,7 +29,7 @@
         <!--  -->
         <div class="col-sm-6 col-md-3 thumb-view-item" ng-repeat="product in products | filter:query | orderBy:orderProp track by product.Id">
             <div class="thumbnail">
-                <div style="overflow: hidden; margin-bottom: 2px;">
+                <div style="overflow: hidden; margin-bottom: 2px; height: 30px;">
                     <div class="pull-right"><a style="cursor: pointer" class="btn btn-primary btn-xs like" ng-click="addLike(product)"><span class="glyphicon glyphicon-thumbs-up"></span>Like</a></div>
                 </div>
                 <a href="#/products/{{product.Id}}" class="thumb">
